--- a/stroom/roles/non_docker_proxy/systemd/tasks/main.yml
+++ b/stroom/roles/non_docker_proxy/systemd/tasks/main.yml
@@ -14,6 +14,7 @@
   when: stroom_service_state is defined
   become: true
   become_user: root
+  when: stroom_proxy_service_installed is defined and stroom_proxy_service_installed.rc == 0
   systemd:
     name: stroom-proxy
     state: stopped
@@ -30,6 +31,7 @@
 
 - name: SystemD Service enable
   when: stroom_service_on_boot is defined
+  register: stroom_proxy_service_installed
   become: true
   become_user: root
   systemd:
