--- a/stroom/roles/setup/java/vars/main.yml
+++ b/stroom/roles/setup/java/vars/main.yml
@@ -42,10 +42,10 @@ _java:
     directory: "jdk-16.0.2"
     home_dir: "{{ java_unarchive_dest }}/jdk-16.0.2"
   17:
-    targz: "jdk-17.0.6_linux-x64_bin.tar.gz"
-    url: "{{ java_17_alt_url | default('https://download.oracle.com/java/17/archive/jdk-17.0.6_linux-x64_bin.tar.gz') }}"
-    directory: "jdk-17.0.6"
-    home_dir: "{{ java_unarchive_dest }}/jdk-17.0.6"
+    targz: "jdk-17.0.2_linux-x64_bin.tar.gz"
+    url: "{{ java_17_alt_url | default('https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-x64_bin.tar.gz') }}"
+    directory: "jdk-17.0.2"
+    home_dir: "{{ java_unarchive_dest }}/jdk-17.0.2"
 
 
 # Java 6,7,8,11 stuff
